# vectorN

./: README.md  vectorN.cabal
src/Data/: Vector1.hs  Vector2.hs  Vector3.hs
src/Data/Vector1/: Mutable.hs  Unboxed.hs
src/Data/Vector1/Unboxed/: Mutable.hs
src/Data/Vector2/: Mutable.hs  Unboxed.hs
src/Data/Vector2/Unboxed/: Mutable.hs
src/Data/Vector3/: Mutable.hs  Unboxed.hs
src/Data/Vector3/Unboxed/: Mutable.hs
